kubernetes-deploy/cluster-bundle/manifests-local-openvre/manifest/networkpolicy-sgecore-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: sgecore-ingress
  labels:
    app.kubernetes.io/part-of: bsc-tre
spec:
  podSelector:
    matchLabels:
      app: dashboard-sgecore
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: dashboard-frontend
    ports:
    - protocol: TCP
      port: 6444
